# pyapikey

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
config/: project.py  python.py  version.py
docs/: .buildinfo  404.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyapikey.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  pyapikey.doctree
docs/_modules/: index.html
docs/_modules/pyapikey/: core.html
docs/_sources/: index.rst.txt  modules.rst.txt  pyapikey.rst.txt
docs/_static/: basic.css  doctools.js  searchtools.js
pyapikey/: __init__.py  core.py  static.py
sphinx/: conf.py  index.rst  modules.rst  pyapikey.rst
src/pyapikey/: core.py  static.py
tests/unit_tests/: test_basic.py
