[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyapikey"
version = "0.0.13"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "access api keys from code"
readme = "README.md"
license = "MIT"
keywords=[
    "api",
    "key",
    "python",
    "secret",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pyapikey"
"Bug Tracker" = "https://github.com/veltzer/pyapikey/issues"
"Documentation" = "https://veltzer.github.io/pyapikey"
"Download" = "https://pypi.org/project/pyapikey/"
"Repository" = "https://github.com/veltzer/pyapikey"


[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyapikey"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyapikey/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"

[tool.uv.pip]
prerelease = "disallow"
